--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "styled-components": "^5.2.1",
     "styled-reset": "^4.3.4",
     "typescript": "^4.2.2",
-    "web-vitals": "^1.1.0"
+    "web-vitals": "^1.1.0",
+    "yarn": "^1.22.10"
   },
   "scripts": {
     "start": "react-scripts start",
